<resources>
    <string name="app_name">Sportz Interactive Practical</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_ipl">Start IPL</string>
    <string name="name">Name</string>
    <string name="simulate">Simulate</string>
    <string name="result">Result</string>
    <string name="select_teams">Select Teams</string>
    <string name="please_enter_team_size">Please enter team size</string>
    <string name="verify_team_size">Verify Team Zise</string>
    <string name="submit">Submit</string>
    <string name="continue_with_dynamic_teams">Continue with dynamic teams</string>
    <string name="continue_with_static_teams">Continue with static teams</string>
</resources>